--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    --theme-color : rgba(139, 224, 210, 0.18);
+    --theme-color : rgba(221, 226, 213, 0.432);
     --theme-color-shadow : rgba(43, 59, 83, 0.448);
 }
 
@@ -10,9 +10,59 @@
 body {
     height: 100vh;
     background-color: var(--theme-color);
-    display: flex;
-    justify-content: center;
+ 
 }
+
+header {
+    background-color: black;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#brand {
+    display: flex;
+    align-items: center;
+}
+
+#brand-name {
+    color: white;
+}
+
+#logo {
+    height: 5em;
+}
+
+#location {
+    display: flex;
+    align-items: center;
+    gap: 3em;
+}
+
+#location span {
+    color: white;
+}
+
+#search-bar {
+    border-radius: 0.2em;
+    margin-right: 1em;
+    padding: 0.2em 0.6em;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+#search-icon {
+    height: 1.2em;
+}
+
+#location-input {
+    border: none;
+    padding: 0.3em 0.4em;
+    margin-left: 0.3em;
+}
+
 
 #content {
     width: 70vw;
@@ -21,203 +71,4 @@ body {
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 20fr 1fr;
     
-}
-
-#sidebar {
-    margin: 0.8em 0.8em 0 0.8em;
-    padding: 0.2em 0.4em;
-    /* border: 1px solid blue;  */
-    border-radius: 0.4em;
-    background-color:white;
-    box-shadow: 0px 0px 6px 2px var(--theme-color-shadow);
-
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.sidebar-section {
-    border: 1px solid yellow;
-}
-
-.sidebar-item {
-    display: flex;
-    align-items: center;
-}
-
-.sidebar-icon {
-    height: 1.5em;
-}
-
-#user-info {
-    border: 1px solid red;
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;    
-}
-
-#today-date {
-    border: 1px solid magenta;
-}
-
-#user {
-    border: 1px solid greenyellow;
-
-    display: flex;
-    align-items: center;  
-}
-
-#avatar {
-    height: 2em;
-}
-
-#main-panel {
-    border: 1px solid green;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-
-    display : grid;
-    grid-template-columns: 1fr;
-    /* grid-template-rows: 1fr 1fr 1fr; */
-    grid-template-rows: 33% 33% 33%;
-
-}
-
-#all-todos {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-
-}
-
-#due-today {
-    border: 1px solid aqua;      
-}
-
-#up_next {
-    border: 1px solid green;      
-}
-
-#recently-completed {
-    border: 1px solid maroon;      
-}
-
-#main-panel h4 {
-    margin: 0.5em 1em;
-}
-
-.task-container {
-    font-size: 0.6em;
-    height: 80%;
-    margin: 0 1em;
-    padding: 0.8em 2em;
-    border: 0; 
-    border-radius: 0.6em;
-    background-color: white;
-    box-shadow: 0px 0px 5px 1px var(--theme-color-shadow);
-    
-    display: flex;
-    flex-direction: column;
-    /* gap: 0.8em; */
-    overflow: auto;
-}
-
-.panel-card {
-    /* justify-items: stretch; */
-
-    /* background-color: rgb(240, 240, 194); */
-    /* border-radius: 0.5em; */
-    border-bottom: 1px solid rgba(47, 79, 79, 0.276);
-    padding: 0.8em 0.7em;
-    /* box-shadow: 2px 3px 5px 1px rgba(0, 0, 255, .2); */
-
-    display: flex;
-    justify-content: space-between;
-    /* justify-content: space-between; */
-}
-
-.panel-card:hover {
-    box-shadow: 0px 0px 5px 2px rgba(3, 125, 127, 0.407);
-}    
-
-.task-details {
-    display: flex;
-    gap: 1em;
-}
-
-.task-priority {
-    width: 1em;
-}
-
-.task-edit-icon {
-    height: 1.25em;
-}
-
-.task-edit-icon:hover {
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 255, 0.562);  
-    height: 1.4em;
-    cursor: pointer;
-}
-
-footer {
-    border: 1px solid palevioletred;
-    grid-column: 1 / 3;
-    grid-row: 3 / 4;
-
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-
-}
-
-#form-container {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-
-    display: flex;
-    justify-content: center;
-
-}
-
-#todo-form, #new-project-form {
-    width: 40vw;
-    height: 50vh;
-    border: 0; 
-    border-radius: 0.6em;
-    background-color: white;
-
-    display: flex;
-    flex-direction: column;  
-    align-items: center;
-    justify-content: space-around; 
-}
-
-.form-input {
-    border: 1px solid gray; 
-    border-radius: 0.4em;
-    background-color: rgba(112, 128, 144, 0.126);
-}
-
-.button-container button {
-    margin: 2em 3em;
-    padding: 0.5em 1em;
-    border-radius: 0.4em;
-}
-
-.button-container button:hover {
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 255, 0.562);  
-    cursor: pointer;
-}
-
-input[type="checkbox"]:hover {
-    cursor: pointer;
 }
