--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,16 @@ header {
     align-items: center;
 }
 
+#banner {
+    width: 70vw;
+    padding: 1em;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0.5em;
+}
+
 #brand {
     display: flex;
     align-items: center;
@@ -136,6 +146,68 @@ header {
     display: flex;
     flex-direction: column;
     gap: 0.75em;
+}
+
+
+
+
+
+/* 
+    Temperature Units Slider
+*/
+
+
+/* size up the container containing the checkbox, i.e. the slider button */
+.switch {
+    position: relative;
+    /* border: 1px solid gray; */
+    display: inline-block;
+    width: 65px;
+    height: 32px;
+}
+
+/* hide actual checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/*  slider track */
+.slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    background-color: #197fbe;
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    transition: background-color 0.25s ease-out;
+  }
+
+/*  circular slider pseudo element*/
+.slider::before {
+    content: "";
+    position: absolute;
+    left: 4px;
+    top: 3px;
+    
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    background-color: white;
+    transition: transform 0.25s ease-out;
+}
+
+/*  move the slider when input box is checked */
+input:checked + .slider::before {
+    transform: translateX(31px);
+}
+
+/*  change background color of slider track when checked */
+input:checked + .slider {
+    background-color: #067843;;
 }
 
 
