--- a/src/style.css
+++ b/src/style.css
@@ -71,10 +71,12 @@ form > button {
 
     display: flex;
     align-items: center;
+    transition: transform 0.2s;
 }
 
 form > button:hover {
     cursor: pointer;
+    transform: scale(1.3);
 }
 
 #search-icon {
@@ -90,7 +92,7 @@ form > button:hover {
 #location-input:focus {
     outline: 1px solid rgb(190, 190, 190);
     border-radius: 0.2em;
-    background-color: #ffe97b3c;
+    background-color: #ffe97b1b;
     transition: background-color 0.2s;
 } 
 
